[package]
authors = ["dolly-parseton <dolly.parseton@gmail.com>"]
edition = "2018"
name = "hivex-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hivex-rs"

[dependencies]
chrono = "0.4"
errno = "0.2.7"
hivex-sys = {path = "hivex-sys"}
structopt = {version = "0.3", default-features = false}
