[package]
name = "hivex-sys"
version = "0.1.0"
authors = ["dolly-parseton <dolly.parseton@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.2"

[build-dependencies]
autotools = "0.2"
bindgen = "0.53.1"